[gd_scene load_steps=3 format=2]

[ext_resource path="res://Art n Music/Fruit Sprites/spiralfruit.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TowerTypeMenu.gd" type="Script" id=3]

[node name="Tower" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 29.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )
fruit_spiralines = 0
fruit_flashfruit = 0
fruit_pomeyes = 0
fruit_bulbfruit = 0
fruit_neutraroots = 0
tower_name = "Tower"
description = ""

[node name="TowerName" type="Label" parent="."]
margin_right = 632.0
margin_bottom = 30.0
size_flags_horizontal = 5
size_flags_vertical = 7
size_flags_stretch_ratio = 0.13
text = "Tower"
align = 1

[node name="MiddleMarginContainer" type="MarginContainer" parent="."]
margin_top = 34.0
margin_right = 632.0
margin_bottom = 271.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MiddleMarginContainer"]
margin_right = 632.0
margin_bottom = 237.0

[node name="GridContainer" type="GridContainer" parent="MiddleMarginContainer/HBoxContainer"]
margin_right = 314.0
margin_bottom = 237.0
size_flags_horizontal = 3
columns = 2

[node name="TextureRect" type="TextureRect" parent="MiddleMarginContainer/HBoxContainer/GridContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="MiddleMarginContainer/HBoxContainer/GridContainer"]
margin_left = 36.0
margin_top = 9.0
margin_right = 51.0
margin_bottom = 23.0
text = "x1"

[node name="Description" type="RichTextLabel" parent="MiddleMarginContainer/HBoxContainer"]
margin_left = 318.0
margin_right = 632.0
margin_bottom = 237.0
size_flags_horizontal = 3
text = "This is the description of what this tower does etc etc"

[node name="ButtonMarginContainer" type="MarginContainer" parent="."]
margin_top = 275.0
margin_right = 632.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.22

[node name="Button" type="Button" parent="ButtonMarginContainer"]
margin_left = 281.0
margin_top = 16.0
margin_right = 350.0
margin_bottom = 36.0
rect_min_size = Vector2( 69, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Buy"
